remove module-info, The Spring Framework 5.x does not support module-info (#27254)
* remove module-info, The Spring Framework 5.x does not support module-info.java in their libraries. We want to align this in our Spring implementations.

https://github.com/spring-projects/spring-framework/issues/18079

* remove surefire plugin java modules proeprties from pom.xml

Co-authored-by: Xiaolu Dai <xiada@microsoft.com>