@@ -33,38 +33,6 @@
     <url>https://github.com/Azure/azure-sdk-for-java/issues</url>
   </issueManagement>
 
-  <properties>
-    <javaModulesSurefireArgLine>
-      --add-modules com.azure.cosmos
-      --add-modules com.azure.data.appconfiguration
-      --add-modules com.azure.messaging.eventhubs
-      --add-modules com.azure.messaging.servicebus
-      --add-modules com.azure.security.keyvault.certificates
-      --add-modules com.azure.security.keyvault.secrets
-      --add-modules com.azure.storage.blob
-      --add-modules com.azure.storage.file.share
-      --add-modules com.azure.storage.internal.avro
-      --add-modules com.azure.storage.queue
-      --add-opens com.azure.spring.core/com.azure.spring.core.factory=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.eventhubs=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.appconfiguration=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.core=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.cosmos=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.credential=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.converter=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.eventhubs=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.keyvault.certificates=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.keyvault.secret=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.servicebus.factory=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.servicebus=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.storage.credential=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.storage.blob=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.storage.fileshare=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation.storage.queue=ALL-UNNAMED
-      --add-opens com.azure.spring.service/com.azure.spring.service.implementation=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>com.azure.spring</groupId>
